syntax = "proto3";

package task_queue;

option go_package = "./task_queue";

// Task Queue Service
service TaskQueueService {
  // Submit a new task
  rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse);
  
  // Get task status
  rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);
  
  // Cancel a task
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse);
  
  // List tasks with filtering
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
  
  // Stream task updates (server-streaming)
  rpc StreamTaskUpdates(StreamTaskUpdatesRequest) returns (stream TaskUpdate);
  
  // Get statistics
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}

// Submit Task
message SubmitTaskRequest {
  string task_type = 1;
  bytes payload = 2;
  uint32 priority = 3;
  optional string schedule_at = 4;
  uint64 timeout_seconds = 5;
  uint32 max_retries = 6;
  repeated string dependencies = 7;
}

message SubmitTaskResponse {
  string task_id = 1;
  string status = 2;
}

// Get Task Status
message GetTaskStatusRequest {
  string task_id = 1;
}

message GetTaskStatusResponse {
  string task_id = 1;
  string status = 2;
  string created_at = 3;
  string updated_at = 4;
  optional bytes result = 5;
  optional string error = 6;
  uint32 retry_count = 7;
  optional string worker_id = 8;
}

// Cancel Task
message CancelTaskRequest {
  string task_id = 1;
}

message CancelTaskResponse {
  bool success = 1;
  string message = 2;
}

// List Tasks
message ListTasksRequest {
  optional string status = 1;
  optional string task_type = 2;
  uint32 limit = 3;
  uint32 offset = 4;
}

message ListTasksResponse {
  repeated TaskInfo tasks = 1;
  uint32 total = 2;
}

message TaskInfo {
  string task_id = 1;
  string task_type = 2;
  string status = 3;
  uint32 priority = 4;
  string created_at = 5;
  string updated_at = 6;
  optional string worker_id = 7;
}

// Stream Task Updates
message StreamTaskUpdatesRequest {
  string task_id = 1;
}

message TaskUpdate {
  string task_id = 1;
  string status = 2;
  optional bytes result = 3;
  optional string error = 4;
  string timestamp = 5;
}

// Get Stats
message GetStatsRequest {
  // Empty request
}

message GetStatsResponse {
  uint32 pending_count = 1;
  uint32 in_progress_count = 2;
  uint64 completed_last_hour = 3;
  uint64 failed_last_hour = 4;
  uint32 worker_count = 5;
  double avg_processing_time_ms = 6;
  QueueDepthByPriority queue_depth_by_priority = 7;
}

message QueueDepthByPriority {
  uint32 high = 1;
  uint32 normal = 2;
  uint32 low = 3;
}